updating dockerfile